--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
+    "@ng-select/ng-select": "^8.1.1",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
+    "swiper": "^8.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
